# ParallelComputationLab

./: CMakeLists.txt  PC_LAB1_linux.cpp  dev_log.txt  pclab.cpp  result.txt
SIMDLib/: VF32_avx.h  simd_arch.h
SIMDLib/VL2/: vl2_matrix.cpp
