PROJECT(pclab)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE(STATUS "${CMAKE_CURRENT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/SIMDLib
    ${CMAKE_CURRENT_SOURCE_DIR}/SIMDLib/VL2
    )
ADD_EXECUTABLE(pclab_exe 
    pclab.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SIMDLib/VL2/vl2_matrix.cpp
    )
